assignment3/app1-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  selector:
    matchLabels:
      app: app1

  replicas: 2
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: ghcr.io/denoslab/ensf400-sample-app:v1
        ports:
        - containerPort: 8080
