assignment3/app2-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  selector:
    matchLabels:
      app: app2

  replicas: 2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: ghcr.io/denoslab/ensf400-sample-app:v2
        ports:
        - containerPort: 8080
