assignment3/nginx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 5
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 8080
        # volumeMounts:
        # - name: nginx-config-volume
        #   mountPath: /etc/nginx/nginx.cfg
        #   subPath: nginx.cfg
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-configmap
