assignment3/app1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app1
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
