assignment3/app2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app2
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
