assignment3/app1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: app1

spec:
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix 
        backend:
          service:
            name: service-app1
            port:
              number: 8080
