assignment3/app2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
  labels:
    app: app2

spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: service-app2
            port:
              number: 8080
